# TransLingo

./: README.md  TransLingo.py  Translater.py  main.py  pyproject.toml  tempCodeRunnerFile.py  translation_history.json
src/language_translator/: __init__.py  translator.py
